--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,17 +16,18 @@
 	<div class="container">    
 		<!-- header -->
       	<div class="header">
-            <div id="imagelogo"></div>
-				<div>
-            	    <h1>
-            	    	<font face="NewStencil">
-            	    		<div class="headername"></div>
-            	    	</font>
-            	    </h1>
-                    <span class="signin">
-                        <%= render 'layouts/header' %>
-                    </span>
-            	</div>
+          <div id="imagelogo"><%= image_tag("IFFLOGO3.png",:width=>'450') %></div>
+            <div id="info">INFORMÁTICA</div>
+						<div>
+            	<h1>
+            	  <font face="NewStencil">
+            	  	<div class="headername"></div>
+            	  </font>
+            	</h1>
+                  <span class="signin">
+                      <%= render 'layouts/header' %>
+                  </span>
+          	</div>
         	</div>
             
             <!-- content -->
