Ajuste de Change ImageProfile em Alunos

--- a/app/assets/stylesheets/session.css.scss
+++ b/app/assets/stylesheets/session.css.scss
@@ -88,7 +88,8 @@ font#registration
 }
 
 .attention .abutton:hover { background-color: #fff;  color: #000; }
-.attention p#loged_in{font-weight: bold;}
+
+div.loged_in   { font-weight:bold; font-size: 14px;}
 
 .attention .button:hover 
 { 
