--- a/app/views/alunos/registrations/new.html.erb
+++ b/app/views/alunos/registrations/new.html.erb
@@ -1,8 +1,4 @@
-<%
-    cursos = ['BSI - Bacharelado - Sistemas de Informação']
-%>
-
-<BR />
+<% cursos = ['BSI - Sistemas de Informação'] %>
 
 <strong>
   <p>
