--- a/app/views/alunos/registrations/edit.html.erb
+++ b/app/views/alunos/registrations/edit.html.erb
@@ -1,6 +1,4 @@
-<%
-    cursos = ['BSI - Bacharelado - Sistemas de Informação']
-%>
+<%  cursos = ['BSI - Sistemas de Informação'] %>
 
 <BR />
 
@@ -61,12 +59,14 @@
     </div>
 
     <div class="botao_left">
-        <%= link_to t('links.back'), avaliadores_index_path, :class=>"botao", :id=>'id_botao' %>
+      <%= link_to t('links.back'), avaliadores_index_path, :class=>"botao", :id=>'id_botao' %>
     </div>
-<%- end -%>
+<% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
+<DIV class="alert">
+  <DIV id="cancelaccount"><%= t('registration.cancel_account') %></DIV>
+    <DIV><%=  t('registration.unhappy')%> 
+      
+      <%= button_to t('links.destroy'), registration_path(resource_name), :data => { :confirm => t('messages.areyousure') }, :method => :delete %>
+    </DIV>
+</DIV>
