Ajuste da tabela de atividades em Aluno

--- a/app/assets/stylesheets/app_design.css
+++ b/app/assets/stylesheets/app_design.css
@@ -38,7 +38,7 @@ body
   line-height:1.5;
   font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;
   color:#000;
-  background:#FFF;
+  background:#8B8989;
   font-size:16pt;
 }
 ul, li, form, input, dt, dl, dd, ol, div, p, blockquote, h1, h2, h3, h4, h5, h6, a 
