--- a/app/views/alunos/password.html.erb
+++ b/app/views/alunos/password.html.erb
@@ -1,2 +1,38 @@
-<h1>Alunos#password</h1>
-<p>Find me in app/views/alunos/password.html.erb</p>
+<FIELDSET><LEGEND><H1><label> Editar Imagem do Perfil </label></H1></LEGEND>
+<DIV id="localization">
+
+<%= form_for(@aluno, :url=>{:action=>'change_password'}) do |l| %>
+    
+     <div class="field">
+        <b><%= l.label "E-mail:" %>&nbsp<i id="red">*</i>&nbsp</b>
+        <%= l.email_field :email,:size=>"29" %>
+    </div> 
+    <div class="field">
+        <i id="blue" class="small">(Deixe em branco se não quiser alterar sua senha!)</i><br />
+        <b><%= l.label "Senha:" %> </b>&nbsp&nbsp
+            <%= l.password_field :password, :size=>'29' %>
+    </div>
+
+    <div class="field">
+        <i id="blue" class="small">(Por favor confirme a sua senha.)</i><br />
+        <b><%= l.label "Repita a senha:" %>&nbsp</b>
+        <%= l.password_field :password_confirmation, :size=>"20" %>
+    </div>
+
+    <div class="field">
+        <i id="red" class="small">(Informe a sua senha atual! )</i><br />
+        <b><%= l.label "Senha Atual:" %>&nbsp&nbsp<i id="red">*</i>&nbsp&nbsp</b>
+        <%= l.password_field :current_password, :size=>"21" %>
+    </div>
+    <br>
+    <br></FIELDSET>
+    <div class="botao_left">
+                <span class="luz"><%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %></span>
+    </div>
+    <div class="botao_left">
+        <p>
+        <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
+            Cancelar&nbsp<font size="30"></p></font>
+        </button>
+    </div>
+<%- end -%>
