--- a/app/views/alunos/profileimage.html.erb
+++ b/app/views/alunos/profileimage.html.erb
@@ -1,5 +1,5 @@
 <FIELDSET>
-    <LEGEND><H1><label> Editar Imagem do Perfil </label></H1></LEGEND>
+    <LEGEND><H1><label><%= t('.Edit') %></label></H1></LEGEND>
 <DIV id="localization">
 
 <%= form_for(@aluno, :url=>{:action=>'reloadimageprofile'}, :html => { :multipart => true }) do |l| %>
@@ -20,14 +20,11 @@
     <br>
     <br></FIELDSET>
     <div class="botao_left">
-        <span class="luz"><%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %></span>
+        <span class="luz"><%= l.submit t('.send'), :class=>"botao", :id=>'id_botao' %></span>
     </div>
     
     <div class="botao_left">
-        <p>
-        <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
-            <%= link_to t('links.back'), avaliadores_index_path %>
-        </button>
+        <%= link_to t('links.back'), aluno_index_path,:class=>"botao", :id=>'id_botao' %>
     </div>
 <%- end -%>
 
