Ajuste dos relatórios em PDF

--- a/app/views/alunos/_listar_atividades.html.erb
+++ b/app/views/alunos/_listar_atividades.html.erb
@@ -1,5 +1,5 @@
 <section>
-<div id="MyAtividades"><table id="home" summary="Atividades"><caption><%= t('activerecord.model.atividade') %></caption>
+<div id="MyAtividades"><table id="home" class="indexTable" summary="Atividades"><caption><%= t('activerecord.model.atividade') %></caption>
     <thead >
     <tr>
         <th><%= t('activerecord.attributes.atividade.title') %></th>
