--- a/app/views/layouts/_current_user.html.erb
+++ b/app/views/layouts/_current_user.html.erb
@@ -44,17 +44,17 @@
       <ul>
         <li class='has-sub '>
           <span>
-              <%= link_to(t('views.menu.links.students'))%>
+              <%= link_to(t('views.menu.links.students'),alunos_pdf_path)%>
           </span>
         </li>
         <li class='has-sub '>
             <span>
-                <%= link_to(t('views.menu.links.avaliators'))%>
+                <%= link_to(t('views.menu.links.avaliators'),avaliadores_report_pdf_path)%>
             </span>
         </li>
         <li class='has-sub '>
             <span>
-                <%= link_to(t('views.menu.links.activities'))%>
+                <%= link_to(t('views.menu.links.activities'),pdf_list_atividades_path)%>
             </span>
         </li>
       </ul>
