--- a/app/assets/stylesheets/jTableCustom.css
+++ b/app/assets/stylesheets/jTableCustom.css
@@ -71,8 +71,9 @@ table#home
     border:1px solid gray;
     border-collapse:collapse;
     font:normal 10px verdana, arial, helvetica, sans-serif;
-    width: 1171px;
 }
+
+.indexTable{ width: 1171px; }
 
 table#home.avaliacoes
 {
