--- a/app/views/avaliadores/new.html.erb
+++ b/app/views/avaliadores/new.html.erb
@@ -1,7 +1,11 @@
 <BR />
 <strong>
-	<font size="9" color="red">*</font><label>&nbsp Campos Obrigatórios</label>
+  <p>
+    <font size="5" color="red">*</font>
+    <label>
+      &nbsp <%= t('form_messages.requiredfields')%>
+    </label>
+  </p>
 </strong>
-<BR />
 
 <%= render 'form' %>
