--- a/app/views/avaliadores/_list_av.html.erb
+++ b/app/views/avaliadores/_list_av.html.erb
@@ -30,7 +30,7 @@
                  </td>
                  <td>
                     <center>
-                      
+                      <%= link_to(t('links.reviews'),exibir_atividades_avaliadas_path(avaliador.id))  %>
                     </center>
                   </td>
                 <%-end-%>
