--- a/app/views/avaliadores/_list_av.html.erb
+++ b/app/views/avaliadores/_list_av.html.erb
@@ -1,5 +1,5 @@
 <table id="home" class='avaliacoes' summary="Atividades">
-    <caption>Avaliadores</caption>
+    <caption><%= t('activerecord.model.avaliador')%></caption>
     <thead>
        <tr>
            <th><%= t('activerecord.attributes.avaliador.nome')%></th>
