--- a/app/views/avaliadores/total_avaliadores.html.erb
+++ b/app/views/avaliadores/total_avaliadores.html.erb
@@ -1,6 +1,6 @@
 <% if avaliador_signed_in? and current_avaliador.admin %>
     <br /><br />
-    <FIELDSET><LEGEND >
+    <FIELDSET id="oldPage"><LEGEND >
         <div id="FieldButton">
             <%= link_to(I18n.t('avaliadores.list_avaliators.new'), new_avaliador_path, :class=>"buttonx") %>
         </div></LEGEND><br />
