--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -8,11 +8,10 @@
 				<%= image_tag(current_avaliador.image) %>
 				<!---->
 				</center></div>
-			<ul><li>
-<%= link_to t('.ProfileImage'),selecionar_imagem_avaliador_path(current_avaliador.id)   %>
-			</li>
-			<li>
-<%= link_to t('.RemoveProfileImage'),remover_imagem_avaliador_path(current_avaliador.id) %></li>
+			<ul>
+				<li><%= link_to t('.ProfileImage'),selecionar_imagem_avaliador_path(current_avaliador.id)%></li>
+				<li><%= link_to t('.RemoveProfileImage'),remover_imagem_avaliador_path(current_avaliador.id) %></li>
+				<li><%= link_to t('.ProfilePassword'),password_avaliador_path(current_avaliador.id) %></li>
 			</ul>
 </ul></div>
 <p id="loged_in">
