--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
           <ul> 
             <li class='header-sub '>
               <span>
-                <%= link_to t('uploader.update_image') %>
+                <%= link_to t('uploader.update_image'), selecionar_imagem_avaliador_path(current_avaliador.id) %>
               </span>
             </li>
             <li class='header-sub '>
