Modalidades MVC completado

--- a/app/views/layouts/_current_user.html.erb
+++ b/app/views/layouts/_current_user.html.erb
@@ -40,6 +40,7 @@
       <li><span><%= link_to(t('views.menu.links.activities'), atividades_complementares_path)%></span></li>
       <li><span><%= link_to(t('views.menu.links.students'), total_alunos_path)%></span></li>
       <li><span><%= link_to(t('views.menu.links.avaliators'),total_avaliadores_path)%></span></li>
+      <li><span><%= link_to(t('views.menu.links.models'),modalidades_index_path)%></span></li>
       <li class='has-sub '><span><%= link_to(t('views.menu.links.pdf_reports'))%></span>
       <ul>
         <li class='has-sub '>
