--- a/app/views/modalidades/_modalidades.html.erb
+++ b/app/views/modalidades/_modalidades.html.erb
@@ -14,7 +14,7 @@
         <% @modalidades.each do |modalidade| %>
           <tr>
             <td><div id="homeleft"><%= modalidade.title %></div></td>
-            <td><center><%= link_to(t('links.edit'),edit_modalidade_path(modalidade)) %></center></td>
+            <td><center><%= link_to(t('links.edit'),edit_modalidade_path(modalidade.id)) %></center></td>
             <td><center><%= link_to(t('links.destroy'), delete_modalidade_path(modalidade), :method => :delete, :confirm => t('messages.areyousure') ) %></center></td>
           </tr>
         <% end %>
