--- a/app/views/alunos/password.html.erb
+++ b/app/views/alunos/password.html.erb
@@ -1,38 +1,40 @@
-<FIELDSET><LEGEND><H1><label> Editar Imagem do Perfil </label></H1></LEGEND>
+<FIELDSET>
+    <LEGEND><H1><label><%= t('alunoes.mypassword.edit') %></label></H1></LEGEND>
 <DIV id="localization">
 
-<%= form_for(@aluno, :url=>{:action=>'change_password'}) do |l| %>
-    
-     <div class="field">
-        <b><%= l.label "E-mail:" %>&nbsp<i id="red">*</i>&nbsp</b>
-        <%= l.email_field :email,:size=>"29" %>
-    </div> 
+<%= form_for(@aluno, :url=>{:action=>'changepassword'}, :html => { :method => :put }) do |f| %>
+     <% if @aluno.errors.any? %>
+        <div id="error_explanation">
+          <%= t 'general.form_error' %>
+        </div>
+    <% end %>
+
     <div class="field">
-        <i id="blue" class="small">(Deixe em branco se não quiser alterar sua senha!)</i><br />
-        <b><%= l.label "Senha:" %> </b>&nbsp&nbsp
-            <%= l.password_field :password, :size=>'29' %>
+        <%= f.label :password %><br />
+        <i id="blue" class="small"><%= t('alunos.changepassword.edit') %></i><BR />
+        <%= f.password_field :password %>
+        <%= error_tag @aluno, :password %>
     </div>
 
     <div class="field">
-        <i id="blue" class="small">(Por favor confirme a sua senha.)</i><br />
-        <b><%= l.label "Repita a senha:" %>&nbsp</b>
-        <%= l.password_field :password_confirmation, :size=>"20" %>
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %>
+      <%= error_tag @aluno, :password_confirmation %>
     </div>
 
     <div class="field">
-        <i id="red" class="small">(Informe a sua senha atual! )</i><br />
-        <b><%= l.label "Senha Atual:" %>&nbsp&nbsp<i id="red">*</i>&nbsp&nbsp</b>
-        <%= l.password_field :current_password, :size=>"21" %>
+      <%= f.label :current_password %><br />
+      <%= f.password_field :current_password %>
+      <%= error_tag @aluno, :current_password %>
     </div>
+  
     <br>
     <br></FIELDSET>
     <div class="botao_left">
-                <span class="luz"><%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %></span>
+        <span class="luz"><%= f.submit t('alunos.profileimage.send'), :class=>"botao", :id=>'id_botao' %></span>
     </div>
+    
     <div class="botao_left">
-        <p>
-        <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
-            Cancelar&nbsp<font size="30"></p></font>
-        </button>
+      <%= link_to t('links.back'), aluno_index_path, :class=>"botao", :id=>'id_botao' %>
     </div>
 <%- end -%>
