--- a/app/assets/stylesheets/app_design.css
+++ b/app/assets/stylesheets/app_design.css
@@ -5,19 +5,10 @@
 *  Lais Stellet 
 */
 
+
 /*Material adicional utilizado*/
 /*http://www.colorzilla.com/gradient-editor/*/
 
-
-
-/* Css - Developed By
-*
-*  Alexandre Sampaio 
-*       &
-*  Lais Stellet 
-*/
-
-/*Material adicional consultado*/
 /* -----------------------------------------------------------------------
 
 
@@ -38,7 +29,7 @@ body
   line-height:1.5;
   font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;
   color:#000;
-  background:#8B8989;
+  background:#000;
   font-size:16pt;
 }
 ul, li, form, input, dt, dl, dd, ol, div, p, blockquote, h1, h2, h3, h4, h5, h6, a 
@@ -145,8 +136,6 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {margin:0;}
 label { font-size: 0.8em; font-weight:bold; color:gray;}
 
 fieldset {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
-fieldset#oldPage {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #fff;}
-fieldset#newPage {margin-left: -10px; padding:9px 0.8em 3em 19px; border:1px solid #fff;}
 legend {font-weight:bold;font-size:1.2em;margin-top:-0.2em;margin-bottom:1em;}
 fieldset, #IE8#HACK {padding-top:1.4em;}
 legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
@@ -159,15 +148,6 @@ input.title {font-size:1.5em;}
 textarea {width:390px;height:250px;padding:5px;}
 form.inline {line-height:3;}
 form.inline p {margin-bottom:0;}
-.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
-.error, .alert {background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;}
-.notice {background:#fff6bf;color:#514721;border-color:#ffd324;}
-.success {background:#e6efc2;color:#264409;border-color:#c6d880;}
-.info {background:#d5edf8;color:#205791;border-color:#92cae4;}
-.error a, .alert a {color:#8a1f11;}
-.notice a {color:#514721;}
-.success a {color:#264409;}
-.info a {color:#205791;}
 
 
 /* @group Footer */
@@ -195,9 +175,6 @@ form.inline p {margin-bottom:0;}
 }
 
 div#info {font-size:50px;}
-
-
-
 
 /* ----------- Setting the Elements ---- */
 
@@ -291,28 +268,6 @@ a#help:hover { color: #fff; background: #222; }
 .submenu-tab a:hover em {background-color: #DA70D6;}
 #tmenu em:hover, .submenu-tab em:hover { background-color: #C0DCF0;}
 
-/*#project-nav ul.submenu {*/
-/*  width: 230px;*/
-/*  background: #fff !important;*/
-/*  position: absolute;*/
-/*  border-bottom: 1px solid #4294CF;*/
-/*  border-left: 1px solid #4294CF;*/
-/*  border-right: 1px solid #4294CF;*/
-/*  top: 33px;font-size: 120%;*/
-/*  left: 0;*/
-/*  z-index: 9;*/
-/*}*/
-
-/*#project-nav ul.submenu li {*/
-/*  float: none;*/
-/*  display: block;*/
-/*  border-bottom: 1px solid #eee;*/
-/*  margin: 0 6px !important;*/
-/*  background-color: #fff;*/
-/*}*/
-
-/*#project-nav ul.submenu li a {color: #333; float: none; padding: 6px;  background-color: #fff;}*/
-/*#project-nav ul.submenu li a:hover { background: transparent; color: #058;}*/
 
 /* @end */
 
@@ -338,6 +293,8 @@ a#help:hover { color: #fff; background: #222; }
   font-size: 13px;
   padding: 8px 20px 5px;
 }
+
+.sidebar_buttons:hover { color: #EE82EE; background: #ddd; }
 
 #simply_button {
   
@@ -708,6 +665,13 @@ div.atividades_table tfoot tr td {text-align: right;}
 #av_text_editor{ margin-left: 1.5%;}
 #av_email_text_editor{margin-left: 1.9%;}
 #av_pass_text_editor{margin-left: 2.6%;}
+
+
+
+
+
+
+
 
 
 
