--- a/app/assets/stylesheets/session.css.scss
+++ b/app/assets/stylesheets/session.css.scss
@@ -20,13 +20,12 @@ form .session {
   input[type=text], input[type=email], input[type=password] {
     color: #444;
     font-size: 12px;
-    border: 1px solid #ccc;
     padding: 5px;
     width: 200px;
     height: 12px;
     outline: 0;
     @include shadow(rgba(0,0,0, 0.1), 0px, 0px, 8px);
-    &:focus { border: 2px solid #32CD32; }
+    &:focus { border: 2px solid #FFD39B; }
   }
 }
 
