--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,49 +6,40 @@
 	  	<%= stylesheet_link_tag    :application, :media => :all %>
 	  	<%= javascript_include_tag :application %>
 	  	<%= javascript_include_tag :all %>
-	    <%= javascript_include_tag :defaults %>
 	  	<%= csrf_meta_tags %>
-
 	  	<%= yield(:head) %>
 	</head>
 <body>
 	<!-- container -->
-	<div class="container">    
+	<div class="container"> 
 		<!-- header -->
-      	<div class="header">
-          <div id="imagelogo"><%= image_tag("IFFLOGO3.png",:width=>'450') %></div>
-            <div id="info">INFORMÁTICA</div>
-						<div>
-            	<h1>
-            	  <font face="NewStencil">
-            	  	<div class="headername"></div>
-            	  </font>
-            	</h1>
-                  <span class="signin">
-                      <%= render 'layouts/header' %>
-                  </span>
-          	</div>
-        	</div>
+  	<div class="header">
+      <div id="imagelogo"><%= image_tag("IFFLOGO3.png",:width=>'450') %></div>
+      <font face="NewStencil">
+      	<div class="headername">
+      		<div id="info">INFORMÁTICA</div>
+      	</div>
+      </font>
+  		<span class="signin">
+        <%= render 'layouts/header' %>
+      </span>
+    </div>
+
             
-            <!-- content -->
-            <div class="conteudo">
-            	<% if notice.present? %>
-					<div id="notice"><%= notice %> </div>
-				<% end %>
-				<% if alert.present? %>
-						<div id="alert"><%= alert %> </div>
-				<% end %>
-            	<%= render 'layouts/current_user' %>
-            	<!-- main -->
-	       		<div></div>
-				<div id="content">
-					
-					<%= yield %>
-				</div>
-				<!-- end of main -->
-			</div>
-			<!-- /content -->
-			
+    <!-- conteudo principal (Dentro do bloco branco) -->
+    <div class="conteudo">
+      <%= render 'layouts/current_user' %>
+      <!-- main -->
+			<% if notice.present? %>
+				<div id="notice"><%= notice %></div>
+			<% end %>
+			<% if alert.present? %>
+				<div id="alert"><%= alert %></div>
+			<% end %>
+			<%= yield %>
+			<!-- end of main -->
+		</div>
+			<!-- /conteudo principal -->
 			<!-- footer -->
 			<div class="footer">
 				<div class="footer-cnt">
